# widget_transaction

./: .gitignore  README.md  REEDME.md  config.py  main.py  pyproject.toml
src/: decorators.py  external_api.py  generators.py  masks.py  my_module.py  processing.py  read_transactions.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_my_module.py  test_processing.py  test_read_transactions.py  test_utils.py  test_widget.py
